@@ -1,14 +1,21 @@
 package me.bounser.nascraft.inventorygui;
 
 import me.bounser.nascraft.Nascraft;
-import me.bounser.nascraft.commands.discord.DiscordInventoryInGame;
+import me.bounser.nascraft.formatter.Formatter;
+import me.bounser.nascraft.formatter.Style;
+import me.bounser.nascraft.inventorygui.Portfolio.PortfolioInventory;
 import me.bounser.nascraft.config.Config;
 import me.bounser.nascraft.config.lang.Lang;
 import me.bounser.nascraft.config.lang.Message;
 import me.bounser.nascraft.discord.alerts.DiscordAlerts;
 import me.bounser.nascraft.discord.linking.LinkManager;
 import me.bounser.nascraft.inventorygui.MiniChart.InfoMenu;
+import me.bounser.nascraft.managers.InventoryManager;
+import me.bounser.nascraft.managers.MoneyManager;
 import me.bounser.nascraft.market.MarketManager;
+import me.bounser.nascraft.market.limitorders.LimitOrder;
+import me.bounser.nascraft.market.limitorders.LimitOrdersManager;
+import me.bounser.nascraft.market.limitorders.OrderType;
 import me.bounser.nascraft.market.resources.Category;
 import me.bounser.nascraft.market.unit.Item;
 import net.kyori.adventure.platform.bukkit.BukkitComponentSerializer;
@@ -22,8 +29,10 @@ import org.bukkit.event.Listener;
 import org.bukkit.event.inventory.InventoryClickEvent;
 import org.bukkit.event.inventory.InventoryCloseEvent;
 import org.bukkit.inventory.Inventory;
+import org.bukkit.inventory.ItemStack;
 import org.bukkit.metadata.FixedMetadataValue;
 
+import java.time.LocalDateTime;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -158,7 +167,7 @@ public class InventoryListener implements Listener {
 
                 if (userId == null) return;
 
-                HashMap<Item, Float> alerts = DiscordAlerts.getInstance().getAlertsOfUUID(player.getUniqueId());
+                HashMap<Item, Double> alerts = DiscordAlerts.getInstance().getAlertsOfUUID(player.getUniqueId());
 
                 if (alerts != null && alerts.containsKey(item)) {
 
@@ -176,32 +185,29 @@ public class InventoryListener implements Listener {
                             Matcher matcher = pattern.matcher(stateSnapshot.getText());
 
                             if (matcher.find()) {
-                                String floatString = matcher.group();
+                                String doubleString = matcher.group();
 
-                                float value = Float.parseFloat(floatString);
+                                double value = Double.parseDouble(doubleString);
 
-                                switch (DiscordAlerts.getInstance().setAlert(userId, item.getIdentifier(), value)) {
-
-                                    case NOT_VALID:
-                                        return Arrays.asList(AnvilGUI.ResponseAction.replaceInputText(Lang.get().message(Message.ANVIL_ALERT_INVALID)));
-                                    case LIMIT_REACHED:
-                                        return Arrays.asList(AnvilGUI.ResponseAction.replaceInputText(Lang.get().message(Message.ANVIL_ALERT_LIMIT_REACHED)));
-                                    case REPEATED:
-                                        return Arrays.asList(AnvilGUI.ResponseAction.replaceInputText(Lang.get().message(Message.ANVIL_ALERT_REPEATED)));
-
-                                    case SUCCESS:
-                                    default:
-                                        return Arrays.asList(
-                                                AnvilGUI.ResponseAction.close(),
-                                                AnvilGUI.ResponseAction.run(() -> {
-                                                    MarketMenuManager.getInstance().setMenuOfPlayer(player, new BuySellMenu(player, item));
-                                                    player.setMetadata("NascraftMenu", new FixedMetadataValue(Nascraft.getInstance(),"item-menu-" + item.getIdentifier()));
-                                                })
-                                        );
-                                }
+                                return switch (DiscordAlerts.getInstance().setAlert(userId, item.getIdentifier(), value)) {
+                                    case NOT_VALID ->
+                                            List.of(AnvilGUI.ResponseAction.replaceInputText(Lang.get().message(Message.ANVIL_ALERT_INVALID)));
+                                    case LIMIT_REACHED ->
+                                            List.of(AnvilGUI.ResponseAction.replaceInputText(Lang.get().message(Message.ANVIL_ALERT_LIMIT_REACHED)));
+                                    case REPEATED ->
+                                            List.of(AnvilGUI.ResponseAction.replaceInputText(Lang.get().message(Message.ANVIL_ALERT_REPEATED)));
+                                    default ->
+                                            Arrays.asList(
+                                            AnvilGUI.ResponseAction.close(),
+                                            AnvilGUI.ResponseAction.run(() -> {
+                                                MarketMenuManager.getInstance().setMenuOfPlayer(player, new BuySellMenu(player, item));
+                                                player.setMetadata("NascraftMenu", new FixedMetadataValue(Nascraft.getInstance(), "item-menu-" + item.getIdentifier()));
+                                            })
+                                    );
+                                };
 
                             } else {
-                                return Arrays.asList(AnvilGUI.ResponseAction.replaceInputText(Lang.get().message(Message.ANVIL_ALERT_INVALID_PRICE)));
+                                return List.of(AnvilGUI.ResponseAction.replaceInputText(Lang.get().message(Message.ANVIL_ALERT_INVALID_PRICE)));
                             }
 
                         })
@@ -210,8 +216,274 @@ public class InventoryListener implements Listener {
                         .plugin(Nascraft.getInstance())
                         .open(player);
 
+                return;
             }
 
+            if (config.getLimitOrdersEnabled() && config.getLimitOrdersBuySellEnabled() && config.getLimitOrdersBuySellSlot() == slot) {
+
+                Item limitItem = MarketManager.getInstance().getItem(metadata.substring(10));
+
+                List<LimitOrder> orders = LimitOrdersManager.getInstance().getPlayerLimitOrders(player.getUniqueId());
+
+                LimitOrder order = null;
+
+                for (LimitOrder limitOrder : orders)
+                    if (limitOrder.getItem().equals(limitItem)) order = limitOrder;
+
+                if (order == null)  {
+                    MarketMenuManager.getInstance().setMenuOfPlayer(player, new SetLimitOrderMenu(player, limitItem));
+                    return;
+                }
+
+                if (order.getOrderType().equals(OrderType.LIMIT_BUY)) {
+
+                    double compensation = ((order.getToComplete()) * order.getPrice()) - order.getCost();
+
+                    if (order.getCompleted() > 0) {
+
+                        if (!InventoryManager.checkInventory(player, true, order.getItem().getItemStack(), order.getCompleted())) return;
+
+                        InventoryManager.addItemsToInventory(player, order.getItem().getItemStack(), order.getCompleted());
+
+                        if (compensation == 0) {
+
+                            Lang.get().message(player, Lang.get().message(Message.GUI_LIMIT_ORDERS_RECEIVED_ITEMS)
+                                    .replace("[AMOUNT]", String.valueOf(order.getCompleted()))
+                                    .replace("[NAME]", order.getItem().getTaggedName())
+                            );
+
+                        } else {
+
+                            Lang.get().message(player, Lang.get().message(Message.GUI_LIMIT_ORDERS_RECEIVED_MONEY_ITEMS)
+                                    .replace("[AMOUNT]", String.valueOf(order.getCompleted()))
+                                    .replace("[NAME]", order.getItem().getTaggedName())
+                                    .replace("[MONEY]", Formatter.format(order.getItem().getCurrency(), ((order.getToComplete()) * order.getPrice()) - order.getCost(), Style.ROUND_BASIC))
+                            );
+
+                            MoneyManager.getInstance().deposit(player, order.getItem().getCurrency(), ((order.getToComplete()) * order.getPrice()) - order.getCost(), 0);
+                        }
+                    } else {
+
+                        Lang.get().message(player, Lang.get().message(Message.GUI_LIMIT_ORDERS_RECEIVED_MONEY)
+                                .replace("[MONEY]", Formatter.format(order.getItem().getCurrency(), ((order.getToComplete()) * order.getPrice()) - order.getCost(), Style.ROUND_BASIC))
+                        );
+
+                        MoneyManager.getInstance().deposit(player, order.getItem().getCurrency(), ((order.getToComplete()) * order.getPrice()) - order.getCost(), 0);
+                    }
+
+                } else {
+
+                    if (order.getCompleted() != order.getToComplete()) {
+
+                        if (!InventoryManager.checkInventory(player, true, order.getItem().getItemStack(), order.getToComplete() - order.getCompleted()))
+                            return;
+
+                        InventoryManager.addItemsToInventory(player, order.getItem().getItemStack(), order.getToComplete() - order.getCompleted());
+
+                        if (order.getCompleted() == 0) {
+
+                            Lang.get().message(player, Lang.get().message(Message.GUI_LIMIT_ORDERS_RECEIVED_ITEMS)
+                                    .replace("[AMOUNT]", String.valueOf(order.getToComplete()))
+                                    .replace("[NAME]", order.getItem().getTaggedName())
+                            );
+
+                        } else {
+
+                            Lang.get().message(player, Lang.get().message(Message.GUI_LIMIT_ORDERS_RECEIVED_MONEY_ITEMS)
+                                    .replace("[AMOUNT]", String.valueOf(order.getToComplete() - order.getCompleted()))
+                                    .replace("[NAME]", order.getItem().getTaggedName())
+                                    .replace("[MONEY]", Formatter.format(order.getItem().getCurrency(), order.getCost(), Style.ROUND_BASIC))
+                            );
+
+                            MoneyManager.getInstance().deposit(player, order.getItem().getCurrency(), order.getCost(), 0);
+                        }
+
+                    } else {
+
+                        Lang.get().message(player, Lang.get().message(Message.GUI_LIMIT_ORDERS_RECEIVED_MONEY)
+                                .replace("[MONEY]", Formatter.format(order.getItem().getCurrency(), order.getCost(), Style.ROUND_BASIC))
+                        );
+
+                        MoneyManager.getInstance().deposit(player, order.getItem().getCurrency(), order.getCost(), 0);
+                    }
+                }
+
+                LimitOrdersManager.getInstance().deleteLimitOrder(order);
+
+                MarketMenuManager.getInstance().setMenuOfPlayer(player, new BuySellMenu(player, item));
+
+                return;
+            }
+
+            return;
+        }
+
+        if (metadata.startsWith("set-limit-order-")) {
+
+            Item item = MarketManager.getInstance().getItem(metadata.substring(16));
+
+            SetLimitOrderMenu menu = (SetLimitOrderMenu) MarketMenuManager.getInstance().getMenuFromPlayer(player);
+
+            if (config.getSetLimitOrderMenuBackEnabled() && config.getSetLimitOrderMenuBackSlot() == slot) {
+                MarketMenuManager.getInstance().setMenuOfPlayer(player, new BuySellMenu(player, item));
+                return;
+            }
+
+            if (config.getSetLimitOrderMenuTimeSlot() == slot) {
+                menu.nextDuration();
+                menu.update();
+                return;
+            }
+
+            if (config.getSetLimitOrderMenuPriceSlot() == slot) {
+
+                new AnvilGUI.Builder()
+                        .onClick((anvilSlot, stateSnapshot) -> {
+
+                            Pattern pattern = Pattern.compile("[-+]?[0-9]*\\.?[0-9]+");
+                            Matcher matcher = pattern.matcher(stateSnapshot.getText());
+
+                            if (matcher.find()) {
+                                String doubleString = matcher.group();
+
+                                double value = Math.abs(Double.parseDouble(doubleString));
+
+                                value = Math.min(value, item.getCurrency().getTopLimit());
+                                value = Math.max(value, item.getCurrency().getLowLimit());
+
+                                menu.setPrice(value);
+
+                                return Arrays.asList(
+                                        AnvilGUI.ResponseAction.close(),
+                                        AnvilGUI.ResponseAction.run(menu::open)
+                                );
+
+                            } else {
+                                return List.of(AnvilGUI.ResponseAction.replaceInputText(Lang.get().message(Message.ANVIL_LIMIT_PRICE_INVALID)));
+                            }
+
+                        })
+                        .text(Lang.get().message(Message.ANVIL_LIMIT_PRICE_TEXT))
+                        .title(Lang.get().message(Message.ANVIL_LIMIT_PRICE_TITLE).replace("[NAME]", item.getName()))
+                        .plugin(Nascraft.getInstance())
+                        .open(player);
+                return;
+            }
+
+            if (config.getSetLimitOrderMenuQuantitySlot() == slot) {
+
+                new AnvilGUI.Builder()
+                        .onClick((anvilSlot, stateSnapshot) -> {
+
+                            Pattern pattern = Pattern.compile("[-+]?\\d+");
+                            Matcher matcher = pattern.matcher(stateSnapshot.getText());
+
+                            if (matcher.find()) {
+                                String intString = matcher.group();
+
+                                int value = Math.abs(Integer.parseInt(intString));
+
+                                if (value == 0 || value > config.getMaxLimitOrderSize())
+                                    return List.of(AnvilGUI.ResponseAction.replaceInputText(Lang.get().message(Message.ANVIL_LIMIT_QUANTITY_MAX_REACHED)
+                                            .replace("[MAX]", String.valueOf(config.getMaxLimitOrderSize()))));
+
+                                menu.setQuantity(value);
+
+                                return Arrays.asList(
+                                        AnvilGUI.ResponseAction.close(),
+                                        AnvilGUI.ResponseAction.run(menu::open)
+                                );
+
+                            } else {
+                                return List.of(AnvilGUI.ResponseAction.replaceInputText(Lang.get().message(Message.ANVIL_LIMIT_QUANTITY_INVALID)));
+                            }
+
+                        })
+                        .text(Lang.get().message(Message.ANVIL_LIMIT_QUANTITY_TEXT))
+                        .title(Lang.get().message(Message.ANVIL_LIMIT_QUANTITY_TITLE).replace("[NAME]", item.getName()))
+                        .plugin(Nascraft.getInstance())
+                        .open(player);
+                return;
+            }
+
+            if (config.getSetLimitOrderMenuConfirmBuySlot() == slot) {
+
+                if (menu.everythingSet()) {
+
+                    if (LimitOrdersManager.getInstance().getPlayerLimitOrders(player.getUniqueId()).size() >= config.getMaxLimitOrdersPerPlayer()) {
+                        Lang.get().message(player, Message.LIMIT_MAX_ORDERS_REACHED);
+                        return;
+                    }
+
+                    double price = menu.getPrice() * menu.getQuantity() + (Math.max(menu.getPrice() * menu.getQuantity() * menu.getDuration().getFee(), menu.getDuration().getMinimumFee()));
+
+                    if (!MoneyManager.getInstance().hasEnoughMoney(player, item.getCurrency(), price)) {
+                        Lang.get().message(player, Message.NOT_ENOUGH_MONEY);
+                        return;
+                    }
+
+                    MoneyManager.getInstance().withdraw(player, item.getCurrency(), menu.getPrice() * menu.getQuantity(), 0);
+
+                    MoneyManager.getInstance().withdraw(player, item.getCurrency(), price - menu.getPrice() * menu.getQuantity(), 1);
+
+                    LimitOrdersManager.getInstance().registerNewLimitOrder(
+                            player.getUniqueId(),
+                            LocalDateTime.now().plusDays(menu.getDuration().getDurationInDays()),
+                            item,
+                            1,
+                            menu.getPrice(),
+                            menu.getQuantity()
+                    );
+
+                    Lang.get().message(Message.LIMIT_BUY_MESSAGE, Formatter.format(item.getCurrency(), menu.getPrice(), Style.ROUND_BASIC), String.valueOf(menu.getQuantity()), item.getName());
+
+                    MarketMenuManager.getInstance().setMenuOfPlayer(player, new BuySellMenu(player, item));
+                    return;
+                }
+                return;
+            }
+
+            if (config.getSetLimitOrderMenuConfirmSellSlot() == slot) {
+
+                if (menu.everythingSet()) {
+
+                    if (LimitOrdersManager.getInstance().getPlayerLimitOrders(player.getUniqueId()).size() >= config.getMaxLimitOrdersPerPlayer()) {
+                        Lang.get().message(player, Message.LIMIT_MAX_ORDERS_REACHED);
+                        return;
+                    }
+
+                    if (!InventoryManager.containsAtLeast(player, item.getItemStack(), menu.getQuantity())) {
+                        Lang.get().message(player, Message.NOT_ENOUGH_ITEMS);
+                        return;
+                    }
+
+                    double fee = Math.max(menu.getPrice() * menu.getQuantity() * menu.getDuration().getFee(), menu.getDuration().getMinimumFee());
+
+                    if (!MoneyManager.getInstance().hasEnoughMoney(player, item.getCurrency(), fee)) {
+                        Lang.get().message(player, Message.NOT_ENOUGH_MONEY);
+                        return;
+                    }
+
+                    MoneyManager.getInstance().withdraw(player, item.getCurrency(), fee, 1);
+
+                    InventoryManager.removeItems(player, item.getItemStack(), menu.getQuantity());
+
+                    LimitOrdersManager.getInstance().registerNewLimitOrder(
+                            player.getUniqueId(),
+                            LocalDateTime.now().plusDays(menu.getDuration().getDurationInDays()),
+                            item,
+                            0,
+                            menu.getPrice(),
+                            menu.getQuantity()
+                    );
+
+                    Lang.get().message(Message.LIMIT_SELL_MESSAGE, Formatter.format(item.getCurrency(), menu.getPrice(), Style.ROUND_BASIC), String.valueOf(menu.getQuantity()), item.getName());
+
+                    MarketMenuManager.getInstance().setMenuOfPlayer(player, new BuySellMenu(player, item));
+                    return;
+                }
+                return;
+            }
             return;
         }
 
@@ -227,17 +499,20 @@ public class InventoryListener implements Listener {
                     return;
                 }
 
-                if (config.getDiscordMarketMenuEnabled() && slot == config.getDiscordSlot()) {
+                if (config.getLimitOrdersMenuEnabled() && slot == config.getLimitOrdersSlot()) {
+                    MarketMenuManager.getInstance().setMenuOfPlayer(player, new LimitOrdersMenu(player));
+                    return;
+                }
 
-                    if (LinkManager.getInstance().getUserDiscordID(player.getUniqueId()) == null) return;
+                if (config.getPortfolioMarketMenuEnabled() && slot == config.getPortfolioSlot()) {
 
-                    Component title = MiniMessage.miniMessage().deserialize(Lang.get().message(Message.DISINV_TITLE));
+                    Component title = MiniMessage.miniMessage().deserialize(Lang.get().message(Message.PORTFOLIO_TITLE));
 
                     Inventory inventory = Bukkit.createInventory(player, 45, BukkitComponentSerializer.legacy().serialize(title));
                     player.openInventory(inventory);
-                    player.setMetadata("NascraftDiscordInventory", new FixedMetadataValue(Nascraft.getInstance(),true));
+                    player.setMetadata("NascraftPortfolio", new FixedMetadataValue(Nascraft.getInstance(),false));
 
-                    DiscordInventoryInGame.getInstance().updateDiscordInventory(player);
+                    PortfolioInventory.getInstance().updatePortfolioInventory(player);
 
                     return;
                 }
@@ -282,6 +557,105 @@ public class InventoryListener implements Listener {
                     if (items.get(index) == null) return;
 
                     DiscordAlerts.getInstance().removeAlert(userId, items.get(index));
+
+                    MenuPage menu = MarketMenuManager.getInstance().getMenuFromPlayer(player);
+
+                    if (menu != null) menu.update();
+                }
+
+            case "limitorders":
+
+                if (config.getLimitOrdersMenuBackEnabled() && config.getLimitOrdersMenuBackSlot() == slot) {
+                    MarketMenuManager.getInstance().setMenuOfPlayer(player, new MainMenu(player));
+                    return;
+                }
+
+                if (config.getLimitOrdersMenuSlots().contains(slot)) {
+
+                    int index = config.getLimitOrdersMenuSlots().indexOf(slot);
+
+                    List<LimitOrder> orders = LimitOrdersManager.getInstance().getPlayerLimitOrders(player.getUniqueId());
+
+                    if (orders == null || orders.isEmpty()) return;
+
+                    LimitOrder order = orders.get(index);
+
+                    if (order == null) return;
+
+                    if (order.getOrderType().equals(OrderType.LIMIT_BUY)) {
+
+                        double compensation = ((order.getToComplete()) * order.getPrice()) - order.getCost();
+
+                        if (order.getCompleted() > 0) {
+
+                            if (!InventoryManager.checkInventory(player, true, order.getItem().getItemStack(), order.getCompleted())) return;
+
+                            InventoryManager.addItemsToInventory(player, order.getItem().getItemStack(), order.getCompleted());
+
+                            if (compensation == 0) {
+
+                                Lang.get().message(player, Lang.get().message(Message.GUI_LIMIT_ORDERS_RECEIVED_ITEMS)
+                                        .replace("[AMOUNT]", String.valueOf(order.getCompleted()))
+                                        .replace("[NAME]", order.getItem().getTaggedName())
+                                );
+
+                            } else {
+
+                                Lang.get().message(player, Lang.get().message(Message.GUI_LIMIT_ORDERS_RECEIVED_MONEY_ITEMS)
+                                        .replace("[AMOUNT]", String.valueOf(order.getCompleted()))
+                                        .replace("[NAME]", order.getItem().getTaggedName())
+                                        .replace("[MONEY]", Formatter.format(order.getItem().getCurrency(), ((order.getToComplete()) * order.getPrice()) - order.getCost(), Style.ROUND_BASIC))
+                                );
+
+                                MoneyManager.getInstance().deposit(player, order.getItem().getCurrency(), ((order.getToComplete()) * order.getPrice()) - order.getCost(), 0);
+                            }
+                        } else {
+
+                            Lang.get().message(player, Lang.get().message(Message.GUI_LIMIT_ORDERS_RECEIVED_MONEY)
+                                    .replace("[MONEY]", Formatter.format(order.getItem().getCurrency(), ((order.getToComplete()) * order.getPrice()) - order.getCost(), Style.ROUND_BASIC))
+                            );
+
+                            MoneyManager.getInstance().deposit(player, order.getItem().getCurrency(), ((order.getToComplete()) * order.getPrice()) - order.getCost(), 0);
+                        }
+
+                    } else {
+
+                        if (order.getCompleted() != order.getToComplete()) {
+
+                            if (!InventoryManager.checkInventory(player, true, order.getItem().getItemStack(), order.getToComplete() - order.getCompleted()))
+                                return;
+
+                            InventoryManager.addItemsToInventory(player, order.getItem().getItemStack(), order.getToComplete() - order.getCompleted());
+
+                            if (order.getCompleted() == 0) {
+
+                                Lang.get().message(player, Lang.get().message(Message.GUI_LIMIT_ORDERS_RECEIVED_ITEMS)
+                                        .replace("[AMOUNT]", String.valueOf(order.getToComplete()))
+                                        .replace("[NAME]", order.getItem().getTaggedName())
+                                );
+
+                            } else {
+
+                                Lang.get().message(player, Lang.get().message(Message.GUI_LIMIT_ORDERS_RECEIVED_MONEY_ITEMS)
+                                        .replace("[AMOUNT]", String.valueOf(order.getToComplete() - order.getCompleted()))
+                                        .replace("[NAME]", order.getItem().getTaggedName())
+                                        .replace("[MONEY]", Formatter.format(order.getItem().getCurrency(), order.getCost(), Style.ROUND_BASIC))
+                                );
+
+                                MoneyManager.getInstance().deposit(player, order.getItem().getCurrency(), order.getCost(), 0);
+                            }
+
+                        } else {
+
+                            Lang.get().message(player, Lang.get().message(Message.GUI_LIMIT_ORDERS_RECEIVED_MONEY)
+                                    .replace("[MONEY]", Formatter.format(order.getItem().getCurrency(), order.getCost(), Style.ROUND_BASIC))
+                            );
+
+                            MoneyManager.getInstance().deposit(player, order.getItem().getCurrency(), order.getCost(), 0);
+                        }
+                    }
+
+                    LimitOrdersManager.getInstance().deleteLimitOrder(order);
 
                     MenuPage menu = MarketMenuManager.getInstance().getMenuFromPlayer(player);
 
